[package]
name = "fc-db"
version = "2.0.0-dev"
license = "GPL-3.0-or-later WITH Classpath-exception-2.0"
edition = "2021"
description = "Frontier database backend."
 
[package.metadata.docs.rs]
targets = ["x86_64-unknown-linux-gnu"]

[dependencies]
kvdb-rocksdb = { version = "0.17.0", optional = true }
log = "0.4.17"
parity-db = { version = "0.4.2", optional = true }
parking_lot = "0.12.1"
scale-codec = { package = "parity-scale-codec", version = "3.2.1", default-features = false, features = ["derive"] }
smallvec = "1.10"
# Substrate
sp-blockchain = { version = "4.0.0-dev", git = "ssh://git@github.com/5ire-tech/5ire-substrate.git" , branch = "upgrade/5irechain-V0.1", default-features = false}
sc-client-db = { version = "0.10.0-dev",git = "ssh://git@github.com/5ire-tech/5ire-substrate.git", branch = "upgrade/5irechain-V0.1",default-features = false  }
sp-core = { version = "7.0.0", git = "ssh://git@github.com/5ire-tech/5ire-substrate.git" , branch = "upgrade/5irechain-V0.1", default-features = false}
sp-database = { version = "4.0.0-dev", git = "ssh://git@github.com/5ire-tech/5ire-substrate.git", branch = "upgrade/5irechain-V0.1", default-features = false }
sp-runtime = { version = "7.0.0",git = "ssh://git@github.com/5ire-tech/5ire-substrate.git" , branch = "upgrade/5irechain-V0.1", default-features = false}
# Frontier
fp-storage = { version = "2.0.0", path = "../../primitives/storage" }

[features]
default = ["kvdb-rocksdb", "parity-db"]

[dev-dependencies]
futures = "0.3.25"
tempfile = "3.3.0"
# Substrate
sp-block-builder = { version = "4.0.0-dev",git = "ssh://git@github.com/5ire-tech/5ire-substrate.git", branch = "upgrade/5irechain-V0.1", default-features = false }
sp-consensus = { version = "0.10.0-dev",git = "ssh://git@github.com/5ire-tech/5ire-substrate.git", branch = "upgrade/5irechain-V0.1", default-features = false }
substrate-test-runtime-client = { version = "2.0.0", git = "ssh://git@github.com/5ire-tech/5ire-substrate.git", branch = "upgrade/5irechain-V0.1", default-features = false  }
